fix alignment

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -39,9 +39,7 @@
 }
 
 .user-description { 
-  width: 50%;
-  text-align: center;
-  margin: 0 auto;	
+  margin: 20px auto;	
 }
 
 .user-competitions {
